--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE">
         <meta name="logo" content="image"> 
-        <link rel="stylesheet" href="css/papel1.css">
+        <link rel="stylesheet" type="text/css" href="css/papel1.css">
        
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
