--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img id="logo" src="images/papel1_logo_new.png" alt="Papel1_logo" srcset="">
       
         
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width initial-scale=1.0">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE">
         <meta name="logo" content="image"> 
