--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ width: 1600px;
   }
         /*pallax effect*/
    body {
-              background-image: url('/images/background.jpg');
+              background-image: url('../images/background.jpg');
               height:100%;
               background-repeat:no-repeat;
               background-attachment:fixed;
