--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ button {
                              
                              
                          <h1 id="graphic-work"> Portfolio</h1>
-
+                         <br>
                        <section class="ads">
                         <h1>Ads</h1>
                         <div class="row">
@@ -443,7 +443,7 @@ button {
                             <img src="images/Ad 3.jpg" alt="" style="width:100%">
                           </div>
                           <div class="column">
-                            <img src="images/Stereo_Ad_recreated.jpg" alt="" style="width:100%">
+                            <img src="images/Stereo Ad.jpg" alt="" style="width:100%">
                           </div>
                         </div> 
 
