--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 <br> have printing and sign experience that I find to be quite
                                 <br>fun and interesting, and they all work hand in hand. I look forward 
                                 <br>to gaining more knowledge as I progress in
-                                <br>my career, and have fun doing it.</p></h3>
+                                my career, and have fun doing it.</p></h3>
 
 
                             </div>
