--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                             <h1>Welcome!</h1> 
                             
                             <h3>Welcome to my Portfolio! Here you will find a selection of my work.
-                            <br> Explore my projects to learn more about what I do.
-                            <br>I believe creative ability should never be laid to waste.
+                             Explore my projects to learn more about what I do.
+                             I believe creative ability should never be laid to waste.
                             <br>Whether it is geometric or organic we are surrounded by nature;
                             <br> above and below.Get your inspiration from at least one source.
                             <br> Let me take you on a journey of inspiration!</h3>
